--- a/thirstPage/index.html
+++ b/thirstPage/index.html
@@ -27,14 +27,14 @@
 
     <div class="osnova">
         <div>
-            <a class="logo" href="index.html"><img src="./assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
-            <img src="./assets/img/крестик.svg" alt="крестик" onclick="closeOver()">
+            <a class="logo" href="index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
+            <img src="../assets/img/крестик.svg" alt="крестик" onclick="closeOver()">
         </div>
         <div class="butons1">
-            <button><a href="./4Page/index.html">Возможности машины времени</a></button>
-            <button><a href="./thirstPage/index.html">Обо мне</a></button>
-            <button><a href="./secondPage/index.html">Путешествия</a></button>
-            <button><a href="index.html">Главная страница</a></button>
+            <button><a href="../4Page/index.html">Возможности машины времени</a></button>
+            <button><a href="../thirstPage/index.html">Обо мне</a></button>
+            <button><a href="../secondPage/index.html">Путешествия</a></button>
+            <button><a href="../index.html">Главная страница</a></button>
         </div>
         <p>
             <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
