--- a/4Page/index.html
+++ b/4Page/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="overlay" id="overlay" onclick="closeOver()"></div>
     <header>
         <a class="logo" href="../index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
         <div class="header">
@@ -17,8 +18,30 @@
                 <button><a href="../secondPage/index.html">Путешествия</a></button>
             </div>
         </div>
-        <img src="../assets/img/бабочкасправа.png" alt="Здесь должна была быть картинка">
+        <img src="../assets/img/бабочкасправа.png" class="butterfly" alt="Здесь должна была быть картинка">
+        <div class="burger_menu" onclick="burger_click()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
+
+    <div class="osnova">
+        <div>
+            <a class="logo" href="index.html"><img src="../assets/img/logo.svg" alt="Здесь должна была быть картинка"></a>
+            <img src="../assets/img/крестик.svg" alt="крестик" onclick="closeOver()">
+        </div>
+        <div class="butons1">
+            <button><a href="../4Page/index.html">Возможности машины времени</a></button>
+            <button><a href="../thirstPage/index.html">Обо мне</a></button>
+            <button><a href="../secondPage/index.html">Путешествия</a></button>
+            <button><a href="../index.html">Главная страница</a></button>
+        </div>
+        <p>
+            <a href="#">ООО «Тайм Трэвел» <br> 2024. Все права защищены.</a> <br>
+            <a href="tel:+78005553535"><span>8-(800)555-35-35</span></a>
+        </p>
+    </div>
     <!------------------------------------------------------------------>
     <main>
         <section class="opportunities">
@@ -33,7 +56,7 @@
         </section>
 
         <section class="list">
-            <img src="../assets/img/бабочкаслева.png" alt="Здесь должна была быть картинка">
+            <img src="../assets/img/бабочкаслева.png" class="butterfly" alt="Здесь должна была быть картинка">
             <div>
                 <h2>Вот список того, что вы можете сделать с <br> помощью машины времени:</h2>
                 <div>
@@ -48,7 +71,7 @@
                 </div>
             </div>
             <div>
-                <img src="../assets/img/бабочкасправа.png" alt="Здесь должна была быть картинка">
+                <img src="../assets/img/бабочкасправа.png" class="butterfly" alt="Здесь должна была быть картинка">
                 <h2>А так же:</h2>
                 <div>
                     <div><p>Исследовать будущее. <br> Вы сможете узнать, как<br> развивается человечество, какие<br> технологии используются и что<br> ждет нас впереди.</p></div>
@@ -59,7 +82,7 @@
 
         <section class="safetyPrecautions">
             <h2>Меры предосторожности при работе с машиной <br> времени</h2>
-            <img src="../assets/img/бабочкаслева.png" alt="Здесь должна была быть картинка">
+            <img src="../assets/img/бабочкаслева.png" alt="Здесь должна была быть картинка" class="butterfly">
             <div>
                 <div><p>Планируйте свои поездки во времени заранее. <br> Прорабатывайте маршруты и цели <br> поездок, чтобы избежать случайных <br> попаданий в непредвиденные ситуации.</p></div>
                 <div><p>Соблюдайте временные правила. <br> Убедитесь, что вы пребываете в <br> нужном временном периоде не <br> дольше, чем планировали, чтобы <br> избежать изменений в ходе истории.</p></div>
@@ -79,5 +102,7 @@
         </div>
         <button><a href="../thirstPage/index.html#rezume">Принять участие</a></button>
     </footer>
+
+    <script src="./burger_menu_click.js"></script>
 </body>
 </html>
