--- a/4Page/index.html
+++ b/4Page/index.html
@@ -103,6 +103,6 @@
         <button><a href="../thirstPage/index.html#rezume">Принять участие</a></button>
     </footer>
 
-    <script src="./burger_menu_click.js"></script>
+    <script src="../burger_menu_click.js"></script>
 </body>
 </html>
